compiler/fabc_parser/src/ast/init/snapshots/fabc_parser__ast__init__module__tests__parses_module_init_with_alias.snap
---
source: compiler/fabc_parser/src/ast/init/module.rs
expression: module_init
---
ModuleInit {
    info: NodeInfo {
        id: 0,
        span: Span {
            start: LineCol(
                1,
                1,
            ),
            end: LineCol(
                1,
                36,
            ),
        },
    },
    path: "my/module/path",
    alias: Some(
        "my_alias",
    ),
}
