compiler/fabc_parser/src/ast/init/snapshots/fabc_parser__ast__init__module__tests__parses_module_init_without_alias.snap
---
source: compiler/fabc_parser/src/ast/init/module.rs
expression: module_init
---
ModuleInit {
    info: NodeInfo {
        id: 0,
        span: Span {
            start: LineCol(
                1,
                1,
            ),
            end: LineCol(
                1,
                24,
            ),
        },
    },
    path: "my/module/path",
    alias: None,
}
